MARP-2669 changed token keys, added junit for authemntication